--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,31 @@
     <title>eikon parcel starter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="scss/main.scss" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <h1>Watson</h1>
+    <div class="first-news">
+      <div class="analyse">
+        <img src="img/analyse.png" alt="photo de macron" />
+      </div>
+      <div class="live">
+        <article class="live-section">
+          <img src="img/gaza_live.png" alt="photo de guerre" />
+        </article>
+        <article class="live-section">
+          <img src="img/sport_live.png" alt="photo de basket" />t
+        </article>
+        <article class="live-section">
+          <img src="img/putin_live.png" alt="photo de putin" />
+        </article>
+      </div>
+    </div>
 
     <script src="js/main.js" type="module"></script>
   </body>
