--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,63 @@
         </article>
       </div>
     </div>
+    <div class="more-read">
+      <h1>LES PLUS LUS</h1>
+      <div class="red-lign"></div>
+      <article class="more-section1">
+        <p class="auteur">Elisabeth Baume-Schneider, Berne, 15 décembre 2023</p>
+        <h2 class="more-title">
+          Elisabeth Baume-Schneider attaquée: peut-elle tenir?
+        </h2>
+        <p class="more-number">1</p>
+        <p class="read-more">LIRE L'ARTICLE</p>
+        <div class="theme-lign1"></div>
+      </article>
+      <article class="more-section2">
+        <p class="auteur">Traduit et adapté par Chiara Lecca</p>
+        <h2 class="more-title">Ricola multiplie les échecs</h2>
+        <p class="more-number">2</p>
+        <p class="read-more">LIRE L'ARTICLE</p>
+        <div class="theme-lign2"></div>
+      </article>
+      <article class="more-section3">
+        <p class="auteur">19.12.2023, 08:12</p>
+        <h2 class="more-title">
+          Les fails sont là! 23 images et GIFs qui vous rendront heureux
+        </h2>
+        <p class="more-number">3</p>
+        <p class="read-more">LIRE L'ARTICLE</p>
+        <div class="theme-lign3"></div>
+      </article>
+    </div>
+    <div class="pub1">
+      <p class="pub">publicité</p>
+      <img class="pub-img" src="img/pub1.png" alt="pub" />
+    </div>
+    <div class="Best-edit">
+      <h1>BEST OF WATSON</h1>
+      <div class="pink-ligne"></div>
+      <div class="best1"><img src="img/best_sport.png" alt="" /></div>
+      <div class="best2"><img src="img/best_politique1.png" alt="" /></div>
+      <div class="best3"><img src="img/best_suisse.png" alt="" /></div>
+    </div>
+    <div class="suisse-new">
+      <h1>Suisse</h1>
+      <div class="bleu-lign"></div>
+      <article class="swiss-section1">
+        <img src="img/theatre.png" alt="2femmes" />
+      </article>
+      <article class="swiss-section2">
+        <img src="img/economie.png" alt="francsuisse" />
+      </article>
+      <article class="swiss-section3">
+        <img src="img/biere.png" alt="biere" />
+      </article>
+    </div>
+    <div class="pub2">
+      <p class="pub">publicité</p>
+      <img class="pub-img2" src="img/pub2.png" alt="pub" />
+    </div>
 
     <script src="js/main.js" type="module"></script>
   </body>
