auteur et date avec titre

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>eikon parcel starter</title>
+    <title>Watson</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="scss/main.scss" />
     <link
@@ -13,20 +13,44 @@
     />
   </head>
   <body>
-    <h1>Watson</h1>
+    <nav>
+      <img src="img/Link - logo.png" alt="" />
+    </nav>
     <div class="first-news">
       <div class="analyse">
         <img src="img/analyse.png" alt="photo de macron" />
+        <p class="etiquet-analyse">Analyse</p>
+        <p class="descriptionA">
+          La France dépasse l'Allemagne comme moteur économique et a une crainte
+        </p>
+        <p class="auteurA">Stefan Brändle, Paris</p>
+        <p class="dateA">18.12.2023, 06:10</p>
       </div>
       <div class="live">
         <article class="live-section">
           <img src="img/gaza_live.png" alt="photo de guerre" />
+          <p class="etiquet-direct">GAZA EN DIRECT</p>
+          <p class="descriptionB">
+            Les Etats-Unis vont continuer de fournir des armes à Israël
+          </p>
+          <p class="dateB">18.12.2023, 23:05</p>
         </article>
         <article class="live-section">
-          <img src="img/sport_live.png" alt="photo de basket" />t
+          <img src="img/sport_live.png" alt="photo de basket" />
+          <p class="etiquet-sport">SPORT EN DIRECT</p>
+          <p class="descriptionC">
+            Le Sporting Lisbonne prend la tête ++ Les Hawks enfoncent Détroit
+          </p>
+          <p class="dateC">18.12.2023, 23:05</p>
         </article>
         <article class="live-section">
           <img src="img/putin_live.png" alt="photo de putin" />
+          <p class="etiquet-live">EN DIRECT</p>
+          <p class="descriptionD">
+            Sanctions contre la Russie: l'UE adopte un 12e paquet +++ l'aide
+            américaine va expirer
+          </p>
+          <p class="dateD">18.12.2023, 23:05</p>
         </article>
       </div>
     </div>
@@ -66,8 +90,22 @@
     <div class="Best-edit">
       <h1>BEST OF WATSON</h1>
       <div class="pink-ligne"></div>
-      <div class="best1"><img src="img/best_sport.png" alt="" /></div>
-      <div class="best2"><img src="img/best_politique1.png" alt="" /></div>
+      <div class="best1">
+        <img src="img/best_sport.png" alt="" />
+        <p class="descriptionE">
+          Cette sauteuse à ski a été disqualifiée en raison de son poids
+        </p>
+        <p class="auteurE">Julien Caloz, France</p>
+        <p class="dateE">18.12.2023, 23:05</p>
+      </div>
+      <div class="best2">
+        <img src="img/best_politique1.png" alt="" />
+        <p class="descriptionF">
+          Fraude à l'asile en Suisse: un réfugié turc raconte
+        </p>
+        <p class="auteurF">Kari Kälin / ch media</p>
+        <p class="dateF">17.12.2023, 17:39</p>
+      </div>
       <div class="best3"><img src="img/best_suisse.png" alt="" /></div>
     </div>
     <div class="suisse-new">
@@ -86,6 +124,39 @@
     <div class="pub2">
       <p class="pub">publicité</p>
       <img class="pub-img2" src="img/pub2.png" alt="pub" />
+    </div>
+    <div class="sport">
+      <h1>Sport</h1>
+      <div class="green-ligne"></div>
+      <div class="sport1"><img src="img/ski.png" alt="skieur" /></div>
+      <div class="sport2"><img src="img/foot.png" alt="2 footbaleurs" /></div>
+      <div class="sport3"><img src="img/tennis.png" alt="tenisman" /></div>
+    </div>
+    <div class="divertissement">
+      <h1>divertissement</h1>
+      <div class="velvet-ligne"></div>
+      <div class="divertissement1">
+        <img src="img/calvinklein.png" alt="skieur" />
+      </div>
+      <div class="divertissement2">
+        <img src="img/selenagomez.png" alt="selenagomez" />
+      </div>
+      <div class="divertissement3">
+        <img src="img/film-critique.png" alt="tenisman" />
+      </div>
+    </div>
+    <div class="blogs">
+      <h1>blogs</h1>
+      <div class="light-green-ligne"></div>
+      <div class="blogs1">
+        <img src="img/avocats-suisse.png" alt="avocats-suisse" />
+      </div>
+      <div class="blogs2">
+        <img src="img/blogs2.png" alt="" />
+      </div>
+      <div class="blogs3">
+        <img src="img/blog3.png" alt="" />
+      </div>
     </div>
 
     <script src="js/main.js" type="module"></script>
