--- a/src/index.html
+++ b/src/index.html
@@ -106,19 +106,41 @@
         <p class="auteurF">Kari Kälin / ch media</p>
         <p class="dateF">17.12.2023, 17:39</p>
       </div>
-      <div class="best3"><img src="img/best_suisse.png" alt="" /></div>
+      <div class="best3">
+        <img src="img/best_suisse.png" alt="" />
+        <p class="descriptionG">
+          La baisse rapide de l'inflation cacherait une mauvaise surprise
+        </p>
+        <p class="auteurG">Niklaus Vontobel / ch media</p>
+        <p class="dateG">15.12.2023, 08:09</p>
+      </div>
     </div>
     <div class="suisse-new">
       <h1>Suisse</h1>
       <div class="bleu-lign"></div>
       <article class="swiss-section1">
         <img src="img/theatre.png" alt="2femmes" />
+        <p class="descriptionH">
+          Faire du théâtre en temps de guerre? C'est difficile. Le duo
+          ukraino-suisse formé par Tatjana Werik et Vivianne Mösli se lance
+          malgré tout.
+        </p>
+        <p class="auteurH">Anna Raymann / ch media</p>
+        <p class="dateH">17.12.2023, 17:29</p>
       </article>
       <article class="swiss-section2">
         <img src="img/economie.png" alt="francsuisse" />
+        <p class="descriptionI">
+          La baisse rapide de l'inflation cacherait une mauvaise surprise
+        </p>
+        <p class="auteurI">Niklaus Vontobel / ch media</p>
+        <p class="dateI">15.12.2023, 08:09</p>
       </article>
       <article class="swiss-section3">
         <img src="img/biere.png" alt="biere" />
+        <p class="descriptionJ">Mauvaise nouvelle pour les buveurs de bière</p>
+        <p class="auteurJ">DE TEAM WATSON</p>
+        <p class="dateJ">18.12.2023, 12:26</p>
       </article>
     </div>
     <div class="pub2">
